Thu Oct 13 18:13:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* atomic.h(ATOMIC_SET): add cast to void to prevent misuse.
	  [ruby-dev:44596] [Bug #5439]

Thu Oct 13 18:04:27 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_finalize_deferred, rb_objspace_call_finalizer):
	  should use ATOMIC_EXCHANGE() to check the previous value.
	  [ruby-dev:44596] [Bug #5439]

Wed Oct 12 23:39:58 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/openssl/test_ssl.rb: Move duplicated tests for SSL::Session to
	  test_ssl_session.rb

Tue Oct 11 08:49:40 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c (rb_ary_initialize):  Improve explanation of Array.new
	  parameters.  Patch by Alvaro Pereyra Rabanal.  [Ruby 1.9 - Bug #5425]
	* array.c (rb_ary_s_try_convert):  Fix typo (try => tries)
	* array.c (rb_ary_rindex):  Add spacing for block.
	* array.c (rb_ary_uniq_bang):  Describe block
	* array.c (rb_ary_uniq):  ditto

Tue Oct 11 07:55:38 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c:  Add a description to Array, minor cleanups.  Patch by
	  Andrea Singh.  [Ruby 1.9 - Bug #5412]

Tue Oct 11 06:09:52 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/pp.rb:  Move PP documentation to top of class PP.  Patch by
	  Sylvain Daubert.  [Ruby 1.9 - Bug #5430]

Tue Oct 11 06:06:29 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/coverage/coverage.c (Init_coverage):  Change list format and
	  describe Coverage.result output.  Patch by Sylvain Daubert.
	  [Ruby 1.9 - Bug #5428]

Tue Oct 11 05:53:23 2011  Eric Hodel  <drbrain@segment7.net>

	* object.c (Init_Object):  Add reference to BasicObject, brief
	  explanation of constant lookup.  Based on patch by Alvaro Pereyra
	  Rabanal.
	  [Ruby 1.9 - Bug #5426]

Sun Oct  9 11:06:52 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* test/psych/test_yamldbm.rb: don't run test if the system
	  don't support yaml/dbm.

	* test/syck/test_yamldbm.rb: ditto.

Sat Oct  8 08:54:56 2011  Eric Hodel  <drbrain@segment7.net>
